--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -30,7 +30,7 @@ jobs:
 
     steps:
       - name: Checkout
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Set up QEMU
         if:  ${{ matrix.arch == 'aarch64' }}
@@ -44,7 +44,7 @@ jobs:
           CIBW_BEFORE_BUILD: pip install oldest-supported-numpy
 
       - name: Upload artifacts
-      - uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
 
