--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,6 +13,9 @@ on:
   schedule:
     - cron: "40 11 * * 0"
 
+env:
+  CIBW_SKIP: cp27-* cp33-* cp34-* cp35-* cp36-* pp27* pp36* pp37* pp38* pp39* pp310* pp311* *-musllinux*
+
 jobs:
   test:
     name: Test fpzip
@@ -20,25 +23,24 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [ '3.8', '3.9', '3.10', '3.11' ]
         arch: [auto]
         include:
           - os: ubuntu-20.04
             arch: aarch64
 
     steps:
-    - name: Checkout
-      - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e .
-        pip install pytest
-        pip install numpy
-    - name: Test with pytest
-      run: |
-        python -m pytest -v -x automated_test.py
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .
+          pip install pytest
+          pip install numpy
+      - name: Test with pytest
+        run: |
+          python -m pytest -v -x automated_test.py
