--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,9 @@ name = "rms-fpzip"
 dynamic = ["version", "authors", "maintainers"]
 description = "Numpy wrapper for fpzip algorithm (P. Lindstrom & M. Isenburg, 2006) RMS Fork"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
-  "numpy",
+  "numpy>=2",
 ]
 license = {text = "BSD"}
 classifiers = [
@@ -24,7 +24,6 @@ classifiers = [
   "Topic :: Scientific/Engineering",
   "Topic :: System :: Archiving :: Compression",
   "License :: OSI Approved :: Apache Software License",
-  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
