--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -40,6 +40,10 @@ jobs:
         env:
           CIBW_ARCHS_LINUX: ${{matrix.arch}}
 
+      - name: Show wheels
+        run: |
+          ls -l ./wheelhouse/*.whl
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
