--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -39,6 +39,10 @@ jobs:
         env:
           CIBW_ARCHS_LINUX: ${{matrix.arch}}
 
+      - shell: bash
+        run: |
+          ls -l ./wheelhouse/*.whl
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
