--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,7 +23,7 @@ jobs:
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
         arch: [auto]
         include:
-          - os: ubuntu-20.04
+          - os: ubuntu-latest
             arch: aarch64
             python-version: '3.12'
 
